@@ -1,5 +1,10 @@
 2005-04-08  Kelley Cook  <kcook@gcc.gnu.org>
 
+	* acconfig.h: Sort the bottom section.
+	* config.h.in: Regenerate.
+
+2005-04-08  Kelley Cook  <kcook@gcc.gnu.org>
+
 	* acconfig.h: Remove redundant HAVE_FLOAT_H.
 	* config.h.in: Regenerate.
 
